; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_TCP_client.c_send_routing_request.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_TCP_client.c_send_routing_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crypto_box_PUBLICKEYBYTES = common dso_local global i32 0, align 4
@TCP_PACKET_ROUTING_REQUEST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @send_routing_request(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %8 = add nsw i32 1, %7
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %5, align 8
  %11 = alloca i32, i64 %9, align 16
  store i64 %9, i64* %6, align 8
  %12 = load i32, i32* @TCP_PACKET_ROUTING_REQUEST, align 4
  %13 = getelementptr inbounds i32, i32* %11, i64 0
  store i32 %12, i32* %13, align 16
  %14 = getelementptr inbounds i32, i32* %11, i64 1
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %17 = call i32 @memcpy(i32* %14, i32* %15, i32 %16)
  %18 = load i32*, i32** %3, align 8
  %19 = mul nuw i64 4, %9
  %20 = trunc i64 %19 to i32
  %21 = call i32 @write_packet_TCP_secure_connection(i32* %18, i32* %11, i32 %20, i32 1)
  %22 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %22)
  ret i32 %21
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #2

declare dso_local i32 @write_packet_TCP_secure_connection(i32*, i32*, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
